table_3/results/Nameless_pre_nullaway_wpi.txt
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/nameless-wpi-pre/src/src/main/java/namelessmc/java_api/NamelessAPI.java:70: warning: [dep-ann] deprecated item is not annotated with @Deprecated
    public @org.checkerframework.checker.initialization.qual.Initialized @org.checkerframework.checker.nullness.qual.NonNull List<Announcement> getAnnouncements(final NamelessUser user) throws NamelessException {
                                                                                                                                                ^
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/nameless-wpi-pre/src/src/main/java/namelessmc/java_api/RequestHandler.java:48: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.debugLogger = debugLogger;
                         ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/nameless-wpi-pre/src/src/main/java/namelessmc/java_api/Website.java:36: error: [NullAway] assigning @Nullable expression to @NonNull field
                this.update = null;
                            ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/nameless-wpi-pre/src/src/main/java/namelessmc/java_api/Website.java:39: error: [NullAway] assigning @Nullable expression to @NonNull field
            this.update = null;
                        ^
    (see http://t.uber.com/nullaway )
/home/nima/Desktop/nullability-docker/table_3/versions/nullaway/nameless-wpi-pre/src/src/main/java/namelessmc/java_api/ApiError.java:91: error: [NullAway] assigning @Nullable expression to @NonNull field
        this.meta = meta;
                  ^
    (see http://t.uber.com/nullaway )
4 errors
1 warning

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 670ms
4
